...
    android:layout_alignParentStart="false"
    android:layout_alignParentTop="false"
    android:backgroundTint="#737373"
    tools:context=".ImageActivity">

    <Button
        android:id="@+id/confirm"
        android:layout_width="130dp"
        android:layout_height="49dp"
        android:text="Confirm"
        android:onClick="onConfirmClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pfp" />

    <TextView
        android:id="@+id/uploadTitle"
        android:layout_width="338dp"
        android:layout_height="136dp"
        android:text="Upload an Image"
...
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.139" />

    <EditText
        android:id="@+id/URL"
        android:layout_width="340dp"
        android:layout_height="59dp"
        android:ems="10"
        android:hint="Enter URL"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/URL"
        app:layout_constraintVertical_bias="0.239"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="284dp"
        android:text="Done"
        android:onClick="onDoneClicked"
        app:layout_constraintStart_toStartOf="parent"
...
